--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .DS_Store
 src/boot
+src/assets/scripts/json/langs/*/dataset.json
+src/assets/scripts/json/dataset
 node_modules
 .sass-cache
 scripts/vendor
