--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "ansi-colors": "^4.1.1",
     "babel-loader": "^8.0.6",
     "del": "^5.0.0",
+    "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-livereload": "^4.0.1",
@@ -28,7 +30,6 @@
     "gulp-rename": "^1.4.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-util": "^3.0.8",
     "webpack": "^4.33.0",
     "webpack-stream": "^5.2.1"
   },
