--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@sentry/browser": "^5.4.0",
     "bootstrap": "^4.3.1",
     "font-awesome": "^4.7.0",
+    "marked": "^0.7.0",
     "md5": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
