--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ src/assets/scripts/json/langs/*/dataset.json
 src/assets/scripts/json/datasets
 node_modules
 .sass-cache
-scripts/vendor
-temp
+tools/vendor
+tools/temp
