--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@babel/plugin-proposal-throw-expressions": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-syntax-import-meta": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "ansi-colors": "^4.1.1",
     "babel-loader": "^8.0.6",
     "del": "^5.0.0",
@@ -40,6 +40,7 @@
   "dependencies": {
     "@sentry/browser": "^5.4.0",
     "bootstrap": "^4.3.1",
+    "core-js": "3",
     "font-awesome": "^4.7.0",
     "md5": "^2.2.1",
     "prop-types": "^15.7.2",
