--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 src/boot
 src/assets/scripts/files/json/langs/*/dataset.json
+src/assets/scripts/files/json/testData.json
 src/assets/scripts/files/json/datasets
 node_modules
 .sass-cache
