--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@sentry/webpack-plugin": "^1.16.0",
     "ansi-colors": "^4.1.1",
     "babel-loader": "^8.0.6",
+    "cheerio": "^1.0.0-rc.10",
     "del": "^6.0.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
@@ -45,12 +46,12 @@
     "bootstrap": "^5.0.1",
     "core-js": "3",
     "font-awesome": "^4.7.0",
-    "md5": "^2.2.1",
+    "md5": "^2.3.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.4"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2"
   }
 }
